Style/style.css
#page {
    display: relative;
  }   
  
  body {
    margin: 0;
    font-family: 'DM Mono', monospace;
  }
  main {
    background-color: #2c67ab;
  }
  
  * {box-sizing: border-box;}
  header {
    
    overflow: hidden;
    width: 100%;
    background-color: white;
    font-size: 30px;
    padding: 20px 10px;
  }
  .responsive {
    width: 100%;
    max-width: 450px;
    height: auto;
  }
  
  #header-img {
    float: left;
    padding: 12px;
    
  }
  header a:hover {
    color: white;
    background-color: #2c67ab;
    border-bottom: 10px solid 2c67ab;
    border-radius: 15px;
  }
  header nav {
    float: right;
    
  }
  
  nav a {
    text-align: center;
    padding: 12px;
    text-decoration: none;
    color: black;
    line-height: 25px;
  }
  
  .sign {
    color: white;
    background-color: #2c67ab;
    border-bottom: 10px solid 2c67ab;
    border-radius: 15px;
  }
  
  #nav-bar {
   display: grid; 
    gap: 0 10px;
   grid-template-columns: auto auto auto auto;
   grid-template-rows: 45px 50px;
   grid-template-areas:
     ". . . ."
     "about online pricing sign";
    
   
  }
  
  .nav-link1 {
    grid-area: about;
  }
  .nav-link2 {
    grid-area: online;
  }
  .nav-link3 {
    grid-area: pricing;
  }
  .nav-link4 {
    grid-area: sign;
  }
  
  
  .container {
    max-width: 100%;
    width: 100%;
    margin: 0 auto;
  }
  
  #break {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    background: linear-gradient(to bottom, #ffffff 3%, #aed0e8 63%);
    color: white;
    height: 200px;
    margin-top: 0px;
  }
  
  #about{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    background-color: #aed0e8;
    color: black;
    height: auto;
    margin-top: 0px;
  }
  
  .lang-logo{
    width: 100%;
    max-width: 400px;
  }
  
  ul {
    text-align: left;
    padding: 0vh 30vw 15vh 30vw;
  }
  
  li {
    background-color: white;
    border-style: inset;
    padding: 2vmin;
    border-width: 8px;
    border-color: #2c67ab;
  }
  
  h3 {
    text-align: left;
    margin-bottom: 3px;
    font-weight: bold;
    font-size: 25px;
  }
  
  #online-material h2 {
    text-align: center;
    padding: 5vh 2vw; 
    margin: 05vh 35vw;
    color: black;
    background-color: rgba(255,255,255, 0.85);
    border: 5px inset #aed0e8;
  }
  
  #online-material {
    background: url("https://i.ytimg.com/vi/uNcd7WwmVlY/maxresdefault.jpg");
    margin-top: -20px;
    padding-top: 5vh;
  }
  
  #video {
    padding: 5vh 38vw; 
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  
  #pricing {
    text-align: center;
    background-color: #aed0e8;
    color: black;
    height: auto;
    margin-top: 0;
    padding-top: 10vh;
     padding-bottom: 10vh;
    height: auto;
    }
  
  #pricing h2 {
    padding-bottom: 20vh;
  }
  
  .box {
    display: flex; 
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: center; 
  }
  
  .card1,
  .card2,
  .card3 {
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.5);
    transition: 0.3s;
    width: 100%;
    max-width: 18vw;
    background-color: white;
    padding-bottom: 5px; 
  }
  
  .card1:hover,
  .card2:hover,
  .card3:hover {
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.8);
  }
  
  .card1 {
    border: 10px inset #AD8A56;
  }
  
  .card2 {
    border: 10px inset #B4B4B4;
  }
  
  .card3 {
    border: 10px inset #C9B037;
  }
  
  .card1 h2 {
  background-color: white;
  color: #AD8A56;
  text-align: center;
  font-size: 100px;
  max-height: 75px;
  }
  
  .card2 h2 {
  background-color: white;
  color: #B4B4B4;
  text-align: center;
  font-size: 100px;
  max-height: 75px;
  }
  
  .card3 h2 {
  background-color: white;
  color: #C9B037;
  text-align: center;
  font-size: 100px;
  max-height: 75px;
  }
  
  #break2 {
  background: linear-gradient(to bottom, #aed0e8 63%, #ffffff 97%);
  color: white;
  height: 300px;
  } 
  
  footer {
    background-color: white;
    height: 100px;
    margin-bottom: -40px;
    text-align:center;
  }
  
  form {
    font-size: 40px;
    padding-bottom: 20px;
  }
  
  #email-label {
    
    color: white;
    background-color: #2c67ab;
    border-bottom: 10px solid 2c67ab;
    border-radius: 15px;
    padding: 3px 10px;
  }
  
  input {
    width: 100%;
    max-width: 25.5vw;
    padding: 10px 10px;
    margin: 8px 0;
    border: 2px solid black;
    border-radius: 15px;
    text-align: center;
    font-size: 25px;
    
  }
  
  @media screen and (max-width: 500px) {
    #header-img {
      float: none;
      display: block;
      margin-right: auto;
      margin-left: auto;
     /* padding-right: 50px; */
      padding: 0 13vw;
      
    }
    #nav-bar {
   padding-left: 25vw; 
   display: grid; 
   gap: 10px 0;
   justify-items: center;
   grid-template-columns:auto;
   grid-template-rows: auto auto auto auto;
   grid-template-areas:
     "about"
     "online" 
     "pricing"
     "sign";
    
    }
    .lang-logo{
      max-width: 250px;
    }
    ul {
    padding: 0vh 10vw 10vh 10vw;
    text-align: left;
    
    
    }
    
    h2,
    h3 {
      padding: 10px 10vw;
    }
    
    iframe {
      max-width: 280px;
      max-height: 157px;
    }
    #online-material h2 {
    text-align: center;
    padding: 5vh 2vw; 
    margin: 05vh 5vw;
    font-size: 15px;
  }
    
  
   .card1,
  .card2,
    .card3 {
      width: 100%;
      max-width: 80vw;
      margin-bottom: 20px;
    }
    
    .card1 h2,
    .card2 h2,
    .card3 h2 {
      font-size: 75px;
      margin-bottom: -20px;
      margin-top: 0px;
    }
    
    .card1 p,
    .card2 p,
    .card3 p {
      font-size: 15px;
    }
    
    form {
      font-size: 20px;
    }
    
    #email-label {
    max-width: 50vw;
    color: white;
    background-color: #2c67ab;
    border-bottom: 10px solid 2c67ab;
    border-radius: 15px;
    padding: 3px 10px;
  }
  
  input {
    width: 100%;
    max-width: 75vw;
    padding: 10px 10px;
    margin: 8px 0;
    border: 2px solid black;
    border-radius: 15px;
    text-align: center;
    font-size: 20px;
    
  }
  
  }
  
  @media screen and (max-width: 750px) {
    #header-img {
      display: block;
      margin-right: auto;
      margin-left: auto;
     /* padding-left:45px;*/
      padding: 0 22vw;
    
    }
    
    
    #nav-bar {
  
   display: grid; 
   gap: 10px 0;
   grid-template-columns: auto 90px;
   grid-template-rows: auto auto auto auto;
   grid-template-areas:
     "about ." 
     "online ." 
     "pricing ."
     "sign .";
    
    }
    
    ul {
    padding: 10px 10vw;
    text-align: left;
    
    
    }
    
    
   .card1,
  .card2,
    .card3 {
      width: 100%;
      max-width: 80vw;
      margin-bottom: 20px;
    }
    
    .card1 h2,
    .card2 h2,
    .card3 h2 {
      font-size: 75px;
      margin-bottom: -20px;
      margin-top: 0px;
    }
    
    .card1 p,
    .card2 p,
    .card3 p {
      font-size: 15px;
    }
  }
  
  
  @media screen and (min-width: 755px) and (max-width: 1050px) {
    
    #nav-bar {
      padding: 0 18vw;
    }
    
    #header-img {
      padding: 0 25vw;
    }
    .card1,
  .card2,
    .card3 {
      width: 100%;
      max-width: 50vw;
      margin-bottom: 20px;
    }
  }
  
  @media screen and (max-width: 1400px) {
    header {
   font-size: 20px;
    }
    .card1,
  .card2,
    .card3 {
      width: 100%;
      max-width: 35w;
      margin-bottom: 20px;
    }
  }

